--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#561621",
         "titleBar.activeBackground": "#791F2E",
         "titleBar.activeForeground": "#FEFBFB"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
